perf: cache list views in TreeSitterAnalyzer properties